QA coments changes

--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -33,6 +33,7 @@
 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./assets/libs/hover-min.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
