--- a/angular-src/documentation/guards/AuthGuard.html
+++ b/angular-src/documentation/guards/AuthGuard.html
@@ -217,7 +217,7 @@ export class AuthGuard implements CanActivate {
     if (this.authService.loggedIn()) {
       return true;
     } else {
-      this.router.navigate([&#x27;/login&#x27;]);
+      this.router.navigate([&#x27;/signin&#x27;]);
       return false;
     }
   }
