--- a/angular-src/documentation/injectables/AuthService.html
+++ b/angular-src/documentation/injectables/AuthService.html
@@ -77,16 +77,10 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#admin">admin</a>
-                            </li>
-                            <li>
                                 <a href="#authToken">authToken</a>
                             </li>
                             <li>
                                 <a href="#baseUrl">baseUrl</a>
-                            </li>
-                            <li>
-                                <a href="#superAdmin">superAdmin</a>
                             </li>
                             <li>
                                 <a href="#user">user</a>
@@ -150,7 +144,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/services/auth.service.ts:23</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/services/auth.service.ts:19</a></div>
                             </td>
                         </tr>
 
@@ -215,7 +209,7 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">src/app/services/auth.service.ts:47</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/app/services/auth.service.ts:40</a></div>
                             </td>
                         </tr>
 
@@ -292,13 +286,15 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">src/app/services/auth.service.ts:53</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="49" class="link-to-prism">src/app/services/auth.service.ts:49</a></div>
                             </td>
                         </tr>
 
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>A method for obtaining data about a registered user profile.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Returns : </b>    <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
@@ -330,13 +326,15 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">src/app/services/auth.service.ts:68</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">src/app/services/auth.service.ts:72</a></div>
                             </td>
                         </tr>
 
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>Loading id_token from local storage</p>
+</div>
 
                             <div class="io-description">
                                 <b>Returns : </b>    <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -368,13 +366,15 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">src/app/services/auth.service.ts:73</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="80" class="link-to-prism">src/app/services/auth.service.ts:80</a></div>
                             </td>
                         </tr>
 
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>id_token check method</p>
+</div>
 
                             <div class="io-description">
                                 <b>Returns : </b>    <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
@@ -406,13 +406,15 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="91" class="link-to-prism">src/app/services/auth.service.ts:91</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="104" class="link-to-prism">src/app/services/auth.service.ts:104</a></div>
                             </td>
                         </tr>
 
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>Method to clear all fields (authToken and user)</p>
+</div>
 
                             <div class="io-description">
                                 <b>Returns : </b>    <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -444,13 +446,15 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="77" class="link-to-prism">src/app/services/auth.service.ts:77</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">src/app/services/auth.service.ts:87</a></div>
                             </td>
                         </tr>
 
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>Method to check if the user is an administrator or superadmin</p>
+</div>
 
                             <div class="io-description">
                                 <b>Returns : </b>    <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
@@ -482,7 +486,7 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/app/services/auth.service.ts:35</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="28" class="link-to-prism">src/app/services/auth.service.ts:28</a></div>
                             </td>
                         </tr>
 
@@ -559,13 +563,15 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">src/app/services/auth.service.ts:61</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">src/app/services/auth.service.ts:62</a></div>
                             </td>
                         </tr>
 
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>Setting values to local storage</p>
+</div>
 
                             <div class="io-description">
                                     <b>Parameters :</b>
@@ -622,40 +628,6 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-                        <a name="admin"></a>
-                        <span class="name">
-                            <b>
-                            admin
-                            </b>
-                            <a href="#admin"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <code>admin:     <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>    <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                        </td>
-                    </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/services/auth.service.ts:23</a></div>
-                            </td>
-                        </tr>
-
-
-            </tbody>
-        </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
                         <a name="authToken"></a>
                         <span class="name">
                             <b>
@@ -679,7 +651,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/services/auth.service.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/services/auth.service.ts:17</a></div>
                             </td>
                         </tr>
 
@@ -712,41 +684,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/services/auth.service.ts:21</a></div>
-                            </td>
-                        </tr>
-
-
-            </tbody>
-        </table>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-                        <a name="superAdmin"></a>
-                        <span class="name">
-                            <b>
-                            superAdmin
-                            </b>
-                            <a href="#superAdmin"><span class="icon ion-ios-link"></span></a>
-                        </span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <code>superAdmin:     <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                    </td>
-                </tr>
-                    <tr>
-                        <td class="col-md-4">
-                            <i>Type : </i>    <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                        </td>
-                    </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/services/auth.service.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/services/auth.service.ts:19</a></div>
                             </td>
                         </tr>
 
@@ -780,7 +718,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/services/auth.service.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/services/auth.service.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -799,7 +737,6 @@ import &#x27;rxjs/add/operator/map&#x27;;
 import { tokenNotExpired } from &#x27;angular2-jwt&#x27;;
 import { error } from &#x27;util&#x27;;
 import { environment } from &#x27;../../environments/environment&#x27;;
-//
 import { IUser } from &#x27;../models/user&#x27;;
 // tslint:disable-next-line:import-blacklist
 import { Observable } from &#x27;rxjs&#x27;;
@@ -813,12 +750,7 @@ export class AuthService {
   authToken: any;
   user: IUser;
   baseUrl &#x3D; environment.baseUrl;
-  superAdmin: string;
-  admin: string;
-// TODO: вынести headers как глобальную переменную
   constructor(private http: Http) {
-    this.superAdmin &#x3D; &#x27;superAdmin@ampx.ca&#x27;;
-    this.admin &#x3D; &#x27;admin@ampx.ca&#x27;;
   }
 
   /**
@@ -844,6 +776,9 @@ export class AuthService {
         .map(res &#x3D;&gt; res.json());
   }
 
+  /**
+   * A method for obtaining data about a registered user profile.
+   */
   getProfile() {
     this.loadToken();
     headers.append(&#x27;Authorization&#x27;, this.authToken);
@@ -852,6 +787,11 @@ export class AuthService {
       .map(res &#x3D;&gt; res.json());
   }
 
+  /**
+   * Setting values to local storage
+   * @param token
+   * @param user
+   */
   storeUserData(token, user) {
     localStorage.setItem(&#x27;id_token&#x27;, token);
     localStorage.setItem(&#x27;user&#x27;, JSON.stringify(user));
@@ -859,21 +799,30 @@ export class AuthService {
     this.user &#x3D; user;
   }
 
+  /**
+   * Loading id_token from local storage
+   */
   loadToken() {
     const token &#x3D; localStorage.getItem(&#x27;id_token&#x27;);
     this.authToken &#x3D; token;
   }
 
+  /**
+   * id_token check method
+   */
   loggedIn() {
     return tokenNotExpired(&#x27;id_token&#x27;);
   }
 
+  /**
+   * Method to check if the user is an administrator or superadmin
+   */
   masterLogedIn() {
     if (window.localStorage) {
       const user &#x3D; localStorage.getItem(&#x27;user&#x27;);
       const u &#x3D; JSON.parse(user);
       const userEmail &#x3D; u.email;
-      if (userEmail &#x3D;&#x3D;&#x3D; this.superAdmin || userEmail &#x3D;&#x3D;&#x3D; this.admin) {
+      if (userEmail &#x3D;&#x3D;&#x3D; environment.sadmin || userEmail &#x3D;&#x3D;&#x3D; environment.admin) {
         return true;
       }
     } else {
@@ -882,6 +831,9 @@ export class AuthService {
     }
   }
 
+  /**
+   * Method to clear all fields (authToken and user)
+   */
   logout() {
     this.authToken &#x3D; null;
     this.user &#x3D; null;
