--- a/angular-src/documentation/injectables/ContactUsService.html
+++ b/angular-src/documentation/injectables/ContactUsService.html
@@ -68,6 +68,20 @@
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Properties</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#baseUrl">baseUrl</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
                 <tr>
                     <td class="col-md-4">
@@ -103,7 +117,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="6" class="link-to-prism">src/app/services/contact-us.service.ts:6</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/services/contact-us.service.ts:11</a></div>
                             </td>
                         </tr>
 
@@ -168,7 +182,7 @@
 
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="8" class="link-to-prism">src/app/services/contact-us.service.ts:8</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/services/contact-us.service.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -213,6 +227,45 @@
         </table>
 </section>
 
+            <section>
+    
+        <h3 id="inputs">
+            Properties
+        </h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="baseUrl"></a>
+                        <span class="name">
+                            <b>
+                            baseUrl
+                            </b>
+                            <a href="#baseUrl"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <code>baseUrl:     <code></code>
+</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>environment.baseUrl</code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/services/contact-us.service.ts:11</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
+</section>
 
     </div>
 
@@ -221,21 +274,24 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable } from &#x27;@angular/core&#x27;;
 import { Http, Headers } from &#x27;@angular/http&#x27;;
 import &#x27;rxjs/add/operator/map&#x27;;
+import { environment } from &#x27;../../environments/environment&#x27;;
+
+const headers &#x3D; new Headers();
+headers.append(&#x27;Content-Type&#x27;, &#x27;application/json&#x27;);
 
 @Injectable()
 export class ContactUsService {
+  baseUrl &#x3D; environment.baseUrl;
   constructor(private http: Http) { }
+
+  /**
+   *
+   * @param user
+   */
   sendContactUsEmail(user) {
-    const headers &#x3D; new Headers();
-    headers.append(&#x27;Content-Type&#x27;, &#x27;application/json&#x27;);
-    // for dev use
-    return this.http.post(&#x27;http://localhost:3000/users/contacts&#x27;, user, {headers: headers})
+    const sendMessageUrl &#x3D; this.baseUrl + &#x27;users/contacts&#x27;;
+    return this.http.post(sendMessageUrl, user, {headers: headers})
       .map(res &#x3D;&gt; res.json());
-    // for deploy use
-  /*
-    return this.http.post(&#x27;users/contacts&#x27;, user, { headers: headers })
-      .map(res &#x3D;&gt; res.json());
-      */
   }
 }
 </code></pre>
