--- a/angular-src/documentation/interfaces/IProject.html
+++ b/angular-src/documentation/interfaces/IProject.html
@@ -103,6 +103,10 @@
                                 </li>
                                 <li>
                                             <span class="modifier">Optional</span>
+                                        <a href="#creatorEmail">creatorEmail</a>
+                                </li>
+                                <li>
+                                            <span class="modifier">Optional</span>
                                         <a href="#date_create">date_create</a>
                                 </li>
                                 <li>
@@ -291,6 +295,40 @@
                                 <tr>
                                     <td class="col-md-4">
                                         <code>creator:     <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>    <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Optional</i>
+                                        </td>
+                                    </tr>
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="creatorEmail"></a>
+                                        <span class="name"><b>creatorEmail</b><a href="#creatorEmail"><span class="icon ion-ios-link"></span></a></span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>creatorEmail:     <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -595,6 +633,7 @@
     _id?: string;
     title?: string;
     creator?: string;
+    creatorEmail?: string;
     date_create?: string;
     updated_date?: string;
     team_project?: any;
